Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -53,16 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
-    "x = np.array([1,2,3])\n",
-    "y = np.array([1,2,2])\n",
-    "\n",
-    "plt.plot(x, y, 'o')\n",
-    "plt.xticks(x)\n",
-    "\n",
-    "plt.show()"
+    "# Code here "
    ]
   },
   {
